k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forlock
  labels:
    app.kubernetes.io/name: forlock
    app.kubernetes.io/component: namespace
